[package]
name = "project3-bgp-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
lazy_static = "1.4.0"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }